# GView

./: .gitignore  CMakeLists.txt  Comenzi.txt  Site.url  vcpkg.json
GenericPlugins/FileHasher/: CMakeLists.txt
GenericPlugins/FileHasher/include/: FileHasher.hpp  Hasher.hpp  RESTManager.hpp  VirusTotalResult.hpp
GenericPlugins/FileHasher/src/: CMakeLists.txt  FileHasher.cpp  Hasher.cpp  RESTManager.cpp
